# cicd-book

./: .gitignore  pyproject.toml
.github/workflows/: oxc.yml
frontend/: .oxlintrc.json  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
